syntax="proto3";

package com.poker.protocols.game.proto; 

option java_package = "com.poker.protocols.game";
option java_outer_classname = "LoginGameProto";

message LoginGame{
	int32  gameid        	= 1;
	int32  level            = 2;
}

// protoc_3.5.1 --java_out=./src ./src/com/poker/protocols/game/proto/LoginGame.proto